// Original file: ../../../../../protos/kafka_service.proto

import type { GrpcGuid_DONTUSE as _ficus_GrpcGuid_DONTUSE, GrpcGuid as _ficus_GrpcGuid } from '../ficus/GrpcGuid';

export interface GrpcRemoveAllPipelinesRequest_DONTUSE {
  'subscriptionId'?: (_ficus_GrpcGuid_DONTUSE | null);
}

export interface GrpcRemoveAllPipelinesRequest {
  'subscriptionId': (_ficus_GrpcGuid | null);
}
