// Original file: /Users/aero/work/workspace/Ficus/protos/kafka_service.proto

import type { GrpcGuid_DONTUSE as _ficus_GrpcGuid_DONTUSE, GrpcGuid as _ficus_GrpcGuid } from '../ficus/GrpcGuid';

export interface GrpcUnsubscribeFromKafkaRequest_DONTUSE {
  'subscriptionId'?: (_ficus_GrpcGuid_DONTUSE | null);
}

export interface GrpcUnsubscribeFromKafkaRequest {
  'subscriptionId': (_ficus_GrpcGuid | null);
}
